Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/167
  Replace 'printf(...)' calls by PySys_WriteStderr(...). They are used to emit
  an error message, if there is a pending error while entering Stackless
  subsystem.

- https://github.com/stackless-dev/stackless/issues/154
  Fix a minor bug in STACKLESS_PROMOTE_WRAPPER and STACKLESS_PROMOTE_METHOD.

- https://github.com/stackless-dev/stackless/issues/150
  Thread ids are now unsigned. See bpo-6532. This change of the Python C-API
  causes analog changes in the Stackless C-API. In
  PyTasklet_BindThread(PyTaskletObject *task, unsigned long thread_id)
  the type of "thread_id" changed from "long" to "unsigned long". And
  the return value of PyStackless_GetCurrentId(void) changed from "long" to
  "unsigned long".
  The prototype of PyStackless_GetCurrentId(void) was missing from
  stackless_api.h. It is now defined.

- https://github.com/stackless-dev/stackless/issues/146
  Always initialize _stackless.bonb type. Prevents a NULL-pointer access,
  if a thread terminates with a MemoryError exception.

- https://github.com/stackless-dev/stackless/issues/145
  Fix the upper bound of tests in test/test_doctest.py.

- https://github.com/stackless-dev/stackless/issues/144
  Replace copied code in pricklepit.c dictview_new.

- https://github.com/stackless-dev/stackless/issues/143
  Fix non-portable usage of bit fields.

- https://github.com/stackless-dev/stackless/issues/141
  Call Py_DECREF(frame) with the right recursion_depth.

- https://github.com/stackless-dev/stackless/issues/137
  C-API: All functions of the form Py{Object, Function, CFunction}_*Call* now
  use STACKLESS_PROMOTE_xxx internally and may be called with