@@ -1123,6 +1123,74 @@ static PyObject *get_test_nostacklesscallobj(void)
     return (PyObject*)PyObject_New(test_nostacklesscallObject, &test_nostacklesscallType);
 }
 
+
+PyDoc_STRVAR(test_PyEval_EvalFrameEx__doc__,
+"test_PyEval_EvalFrameEx(code, globals, args=()) -- a builtin testing function.\n\
+This function tests the C-API function PyEval_EvalFrameEx(), which is not used\n\
+by Stackless Python.\n\
+The function creates a frame from code, globals and args and executes the frame.");
+
+static PyObject* test_PyEval_EvalFrameEx(PyObject *self, PyObject *args, PyObject *kwds) {
+    static char *kwlist[] = {"code", "globals", "args", "alloca", NULL};
+    PyThreadState *tstate = PyThreadState_GET();
+    PyCodeObject *co;
+    PyObject *globals, *co_args = NULL;
+    Py_ssize_t alloca_size = 0;
+    PyFrameObject *f;
+    PyObject *result = NULL;
+    void *p;
+    Py_ssize_t na;
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwds, "O!O!|O!n:test_PyEval_EvalFrameEx", kwlist,
+            &PyCode_Type, &co, &PyDict_Type, &globals, &PyTuple_Type, &co_args, &alloca_size))
+        return NULL;
+    p = alloca(alloca_size);
+    assert(globals != NULL);
+    assert(tstate != NULL);
+    na = PyTuple_Size(co->co_freevars);
+    if (na == -1)
+        return NULL;
+    if (na > 0) {
+        PyErr_Format(PyExc_ValueError, "code requires cell variables");
+        return NULL;
+    }
+    f = PyFrame_New(tstate, co, globals, NULL);
+    if (f == NULL) {
+        return NULL;
+    }
+    if (co_args) {
+        PyObject **fastlocals;
+        Py_ssize_t i;
+        na = PyTuple_Size(co_args);
+        if (na == -1)
+            goto exit;
+        if (na > co->co_argcount) {
+            PyErr_Format(PyExc_ValueError, "too many items in tuple 'args'");
+            goto exit;
+        }
+        fastlocals = f->f_localsplus;
+        for (i = 0; i < na; i++) {
+            PyObject *arg = PyTuple_GetItem(co_args, i);
+            if (arg == NULL) {
+                goto exit;
+            }
+            Py_INCREF(arg);
+            fastlocals[i] = arg;
+        }
+        if (alloca_size > 0 && na > 0) {
+            Py_SETREF(fastlocals[0], PyLong_FromVoidPtr(p));
+        }
+    }
+    result = PyEval_EvalFrameEx(f,0);
+    /* result = Py_None; Py_INCREF(Py_None); */
+exit:
+    ++tstate->recursion_depth;
+    Py_DECREF(f);
+    --tstate->recursion_depth;
+    return result;
+}
+
+
 /******************************************************
 
   The Stackless External Interface
@@ -1594,6 +1662,8 @@ static PyMethodDef stackless_methods[] = {
     test_outside__doc__},
     {"test_cstate",                 (PCF)test_cstate,           METH_O,
     test_cstate__doc__},
+    {"test_PyEval_EvalFrameEx",     (PCF)test_PyEval_EvalFrameEx, METH_VARARGS | METH_KEYWORDS,
+    test_PyEval_EvalFrameEx__doc__},
     {"set_channel_callback",        (PCF)set_channel_callback,  METH_O,
      set_channel_callback__doc__},
     {"get_channel_callback",        (PCF)get_channel_callback,  METH_NOARGS,
